RESOLVED FIXED198374
Rare crash under `WebPage::shouldIgnoreMetaViewport const` when shrinking to fit content
https://bugs.webkit.org/show_bug.cgi?id=198374
Summary Rare crash under `WebPage::shouldIgnoreMetaViewport const` when shrinking to ...
Wenson Hsieh
Reported 2019-05-30 08:14:23 PDT
Attachments
Patch (1.94 KB, patch)
2019-05-30 08:20 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-05-30 08:20:59 PDT
Wenson Hsieh
Comment 2 2019-05-30 10:37:54 PDT
Comment on attachment 370943 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 3 2019-05-30 11:05:24 PDT
Comment on attachment 370943 [details] Patch Clearing flags on attachment: 370943 Committed r245894: <https://trac.webkit.org/changeset/245894>
WebKit Commit Bot
Comment 4 2019-05-30 11:05:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.